# zappy

./: .gitignore  Makefile  zappy_ai
ai/: .coveragerc  Makefile  __init__.py  __main__.py  make.py  parse_args.py  zappy_ai  zappy_ai.py
ai/api_server/: api.py
ai/src/: errors.py  log.py  parse_args.py  zappy_ai.py
ai/src/api_server/: __init__.py  api.py
ai/src/game/: __init__.py  action.py  ai.py  algorithm.py  elevation.py  framerate.py  inventory.py  level.py  message.py  player.py  position.py  role.py  team.py  vision.py
ai/src/utils/: __init__.py  clock.py  is_squared.py
ai/tests/: test_beginning_responses.py  test_inventory.py  test_log.py  test_message.py  test_request_responses.py  test_requests.py  test_responses.py  test_spontaneous_response.py  test_utils.py  test_vision.py
gui/: .gitignore  CMakeLists.txt
gui/libs/Engine/: Core.hpp  ECS.hpp  Engine.hpp  Entrypoint.hpp  Graphics.hpp  Utils.hpp
gui/libs/Engine/Core/: Application.cpp  Application.hpp  Asserts.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneManagerInternal.cpp  SceneManagerInternal.hpp  Time.cpp  Time.hpp
gui/libs/Engine/Core/Exceptions/: ArgumentHelpException.cpp  ArgumentHelpException.hpp  ArgumentParsingError.cpp  ArgumentParsingError.hpp
gui/libs/Engine/ECS/: GameObject.cpp  GameObject.hpp  Script.hpp
gui/libs/Engine/ECS/Components/: Animator.cpp  Animator.hpp  BoxCollider.cpp  BoxCollider.hpp  Button.cpp  Button.hpp  Drawable.cpp  Drawable.hpp  IComponent.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  MusicPlayer.cpp  MusicPlayer.hpp  SoundPlayer.cpp  SoundPlayer.hpp  Text.cpp  Text.hpp  Transform.cpp  Transform.hpp
gui/libs/Engine/Graphics/: AudioContext.cpp  AudioContext.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Font.cpp  Font.hpp  Gradient.hpp  IDrawable.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Line2D.cpp  Line2D.hpp  Line3D.cpp  Line3D.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelAnimator.cpp  ModelAnimator.hpp  Mouse.cpp  Mouse.hpp  Music.cpp  Music.hpp  Noise.hpp  Pixel.cpp  Pixel.hpp  Plane.cpp  Plane.hpp  RectangularPrism.cpp  RectangularPrism.hpp  Sound.cpp  Sound.hpp  Sphere.cpp  Sphere.hpp  Text.cpp  (+15 more)
gui/libs/Engine/Graphics/Exceptions/: ResourceInitialization.cpp  ResourceInitialization.hpp
gui/libs/Engine/Utils/: Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  Grid3.cpp  Grid3.hpp  Grid3Cell.cpp  Grid3Cell.hpp  Rectangle3.hpp  Vector2.hpp  Vector3.hpp  string.hpp
gui/libs/Engine/Utils/deserializer/: component.cpp  deserializer.hpp  object.cpp  scene.cpp  sceneConf.cpp  script.cpp
gui/src/: App.cpp  App.hpp
gui/src/assets/models/bomb/: bomb.mtl
gui/src/assets/models/drone/: creeper.glb  striker.glb
gui/src/assets/models/egg/: egg.glb
gui/src/assets/models/enemies/: creature1.mtl  creature2.mtl  creature3.mtl  creature4.mtl  creature5.mtl
gui/src/assets/models/items/: bombup.mtl  extralife.mtl  fireup.mtl  speedup.mtl  wallpass.mtl
gui/src/assets/models/other/: iu7461ne3y2c.mtl  striker.glb  yp916retfjjw.gltf  z3fnitmqyml5.mtl
gui/src/assets/models/other/room/: dmoo44y2ykig.mtl  room.3ds  room.glb  room.mtl  t60bxr32dfit.mtl
gui/src/assets/models/player/: player1.mtl  player2.mtl  player3.mtl  player4.mtl  player5.mtl  player6.mtl
gui/src/assets/models/player_old/: BM64-Bomberman-Cust.mtl
gui/src/assets/models/tiles/: netherite_block.glb
gui/src/assets/models/tiles/items/: crystals.glb  food.glb  pineapple.mtl  turtles.blend  turtles.glb
gui/src/zappy/: BuildScenes.json
gui/src/zappy/prefabs/: Bomb.json  BombPowerUp.json  Box.json  Button.json  Drone.json  Egg.json  Explosion.json  ExtraLifePowerUp.json  FirePowerUp.json  Food.json  Ground.json  Incantation.json  Mineral.json  Player.json  ResultScreen.json  SpeedPowerUp.json  Tile.json  TileInventory.json  Wall.json
gui/src/zappy/scenes/: Game.json  Menu.json
gui/src/zappy/scripts/: Bomb.cpp  Bomb.hpp  CameraCtrl.cpp  CameraCtrl.hpp  CreatePlayers.cpp  CreatePlayers.hpp  Drone.cpp  Drone.hpp  Egg.cpp  Egg.hpp  Explosion.cpp  Explosion.hpp  Incantation.cpp  Incantation.hpp  Initializer.cpp  Initializer.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  ResultScreen.cpp  ResultScreen.hpp  SoundHandler.cpp  SoundHandler.hpp  Tile.cpp  Tile.hpp  handlers.cpp
gui/src/zappy/scripts/net/: NetworkManager.cpp  NetworkManager.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
gui/src/zappy/scripts/resources/: Inventory.cpp  Inventory.hpp
server/: .gitignore  Makefile
server/include/: arg_parser.h  arguments.h  command_request.h  commands.h  elevation.h  resource.h  server.h
server/include/arg_parser/: arg_checker.h  arg_options.h  arg_setter.h  arguments.h
server/include/logger/: logger.h
server/include/mylist/: free_2d_array.h  node.h
server/include/network/: command_request.h  network.h  response.h
server/include/server/: client.h  logging.h  server.h
server/include/simulation/: direction.h  drone.h  egg.h  elevation.h  incantation.h  inventory.h  map.h  packet.h  resources.h  server.h  simulation.h  simulators.h  team.h  tile.h  vector.h
server/include/zappy/: map.h  resources.h  teams.h
server/libs/epinet/: Makefile
server/libs/my/: Makefile  get_next_line.c  my.h  my_get_nbr.c  my_is_digit.c  my_str_cat.c  my_str_len.c
server/libs/mylist/: Makefile  config.mk  my_concat_str_list.c  my_create_node.c  my_delete_node.c  my_list_to_2d_array.c  my_list_to_str.c  my_node_from.c  mylist.h
server/src/: arguments_default_values.c  main.c  usage.c
server/src/arg_parser/: parse.c
server/src/arguments/: create.c  destroy.c  set_default_values.c
server/src/logger/: find_message.c  logger.c  map.c
server/src/network/: get_input_stock.c  handle_client_connection.c  handle_clients_in.c  handle_clients_out.c  remove_connection.c  start.c  stop.c
server/src/server/: add_notification.c  clear_client.c  find_client_from_drone.c  find_client_from_id.c  launch.c  remove_client.c  run.c  start.c  stop.c
server/src/simulation/: entity_id.c  find_team_from_drone.c  handle.c  remove_drone.c  start.c  stop.c
(+366 files in other folders)
